Made it so that nav height changed with each article, fixed overflow.

--- a/websiteStyle.css
+++ b/websiteStyle.css
@@ -24,10 +24,10 @@ header {
 nav {
   float: left;
   width: 15%;
-  height: 100vh;
   background-color: #EDE9DA;
   font-size: 120%;
   text-align:center;
+  height: 100vh;
 }
 
 nav button {
@@ -36,7 +36,7 @@ nav button {
   border: none;
   outline: none;
   width: 100%;
-  height: 7%;
+  height: 10vh;
   font-size: 100%;
   transition: 0.3s;
   font-family: Monaco;
@@ -74,8 +74,7 @@ nav button.active {
   border-width: 17px;
   border-color: #FCFAF3;
   animation: fadeEffect 0.3s;
-  font-size: 120%;
-  height: 90vh;
+  font-size: 100%;
 }
 
 @keyframes fadeEffect {
